Implement front end design for match page (no image)

--- a/client/styles.css
+++ b/client/styles.css
@@ -31,7 +31,7 @@ body {
   }
   
   /* Chalkboard Match Content */
-  .chalkboard-border {
+  .chalkboard-match-border {
     text-align: center;
     width: 100%;
     color: white;
