--- a/client/styles.css
+++ b/client/styles.css
@@ -9,6 +9,26 @@ body {
     justify-content: center;
     align-items: center;
   }
+
+/* Button Styling */
+button {
+    margin-top: 35px;
+    padding: 10px 20px;
+    font-size: 1.2em;
+    color: #355E3B;
+    background: white;
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+    font-family: inherit;
+    font-weight: bold;
+    transition: all 0.3s ease;
+  }
+  
+  button:hover {
+    background: #f4f4f4;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.4);
+  }
   
   /* Chalkboard Styles */
   .chalkboard {
@@ -27,7 +47,7 @@ body {
   .chalkboard-border {
     text-align: center;
     width: 35%;
-    color: white;
+    color: white;  
   }
   
   /* Chalkboard Match Content */
@@ -38,7 +58,7 @@ body {
   }
 
   h1 {
-    font-size: 4em;
+    font-size: 3.5em;
     margin-bottom: 20px;
     text-transform: lowercase;
   }
