--- a/client/styles.css
+++ b/client/styles.css
@@ -62,6 +62,27 @@ button {
     margin-bottom: 20px;
     text-transform: lowercase;
   }
+
+  /* Circle for Image */
+.circle {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    background-color: white;
+    overflow: hidden;
+    margin: 20px auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
+    border: 5px solid white;
+}
+
+.circle img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
   
   /* Form Styling */
   form {
