--- a/client/styles.css
+++ b/client/styles.css
@@ -163,3 +163,37 @@ input::placeholder {
 .chalk.white.two {
     left: 160px; 
 }
+
+/* Container to position both rectangles */
+.container {
+    position: absolute;
+    bottom: 35px;
+    width: 100%; 
+    height: 20px; 
+    display: flex; 
+    justify-content: flex-start; 
+    gap: 10px; 
+  }
+  
+  /* Black Rectangle */
+  .rounded-rectangle.black {
+    position: absolute;
+    width: 125px;
+    height: 40px;
+    background-color: black; /* Black background */
+    border-radius: 15px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.6);
+    left: 1050px;
+  }
+  
+  /* Gray Rectangle (on top) */
+  .rounded-rectangle.gray {
+    position: absolute;
+    width: 125px; /* Smaller width */
+    height: 40px; /* Smaller height */
+    background-color: #333; /* Gray background */
+    border-radius: 15px; /* Rounded corners */
+    bottom: 0px; /* Center it vertically within the black rectangle */
+    left: 1050px;
+  }
+  
